[gd_scene load_steps=3 format=2]

[ext_resource path="res://old/LoginScreen.gd" type="Script" id=1]
[ext_resource path="res://old/LoginUI.gd" type="Script" id=2]

[node name="Server" type="Node"]
script = ExtResource( 1 )

[node name="Login" type="NinePatchRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
region_rect = Rect2( 907, 99, 0, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Login"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -300.0
margin_right = 100.0
margin_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Login/VBoxContainer"]
margin_top = 232.0
margin_right = 200.0
margin_bottom = 246.0
text = "Login:"

[node name="LineEdit" type="LineEdit" parent="Login/VBoxContainer"]
margin_top = 250.0
margin_right = 200.0
margin_bottom = 274.0
placeholder_text = "username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit2" type="LineEdit" parent="Login/VBoxContainer"]
margin_top = 278.0
margin_right = 200.0
margin_bottom = 302.0
placeholder_text = "password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Login/VBoxContainer"]
margin_top = 306.0
margin_right = 200.0
margin_bottom = 326.0
text = "Login"

[node name="Button2" type="Button" parent="Login/VBoxContainer"]
margin_top = 330.0
margin_right = 200.0
margin_bottom = 350.0
text = "Register"

[node name="Label2" type="Label" parent="Login/VBoxContainer"]
margin_top = 354.0
margin_right = 200.0
margin_bottom = 368.0

[node name="Register" type="NinePatchRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Register"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -300.0
margin_right = 100.0
margin_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Register/VBoxContainer"]
margin_top = 190.0
margin_right = 202.0
margin_bottom = 204.0
text = "Register:"

[node name="LineEdit" type="LineEdit" parent="Register/VBoxContainer"]
margin_top = 208.0
margin_right = 202.0
margin_bottom = 232.0
placeholder_text = "username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit2" type="LineEdit" parent="Register/VBoxContainer"]
margin_top = 236.0
margin_right = 202.0
margin_bottom = 260.0
placeholder_text = "password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit3" type="LineEdit" parent="Register/VBoxContainer"]
margin_top = 264.0
margin_right = 202.0
margin_bottom = 288.0
placeholder_text = "password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit4" type="LineEdit" parent="Register/VBoxContainer"]
margin_top = 292.0
margin_right = 202.0
margin_bottom = 316.0
placeholder_text = "email"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="Register/VBoxContainer"]
margin_top = 320.0
margin_right = 202.0
margin_bottom = 344.0
text = "agree with terms of service"

[node name="Button" type="Button" parent="Register/VBoxContainer"]
margin_top = 348.0
margin_right = 202.0
margin_bottom = 368.0
text = "Create Account"

[node name="Button2" type="Button" parent="Register/VBoxContainer"]
margin_top = 372.0
margin_right = 202.0
margin_bottom = 392.0
text = "Back to Login"

[node name="Label2" type="Label" parent="Register/VBoxContainer"]
margin_top = 396.0
margin_right = 202.0
margin_bottom = 410.0
[connection signal="button_down" from="Login/VBoxContainer/Button" to="Login" method="_on_Button_button_down"]
[connection signal="button_down" from="Login/VBoxContainer/Button2" to="Login" method="_on_Button2_button_down"]
